--- a/configs/gfp_ddg/MosPro_GFP_stability.yml
+++ b/configs/gfp_ddg/MosPro_GFP_stability.yml
@@ -1,8 +1,8 @@
 task: GFP
 obj_1: stability
 obj_2: GFP
-predictor_1_dir: logs_percentile_0.4/GFP_ddg/train_predictor_ddg4GFP_percentile_0.4_2024_01_20__13_13_51_augment
-predictor_2_dir: logs_percentile_0.4/GFP_ddg/train_predictor_GFP_percentile_0.4_2024_01_20__13_12_41_augment
+predictor_1_dir: logs_predictor/train_predictor_ddg4GFP_percentile_0.4_2024_01_29__00_28_59
+predictor_2_dir: logs_predictor/train_predictor_GFP4ddg_2024_01_29__00_28_19
 predictor_1_type: BaseCNN
 predictor_2_type: BaseCNN
 csv_path: data/GFP/ground_truth_GFP_stability_percentile_0.4.csv
