--- a/configs/gfp_naturalness/evaluate.yml
+++ b/configs/gfp_naturalness/evaluate.yml
@@ -8,7 +8,7 @@ ref_seq_fasta: data/GFP/GFP_reference_seq_aa.fasta
 ground_truth_stability: data/GFP/stability_foldx_deduplicate_af2.csv
 ground_truth_GFP: data/GFP/GFP_ground_truth_deduplicate.csv
 ground_truth_csv: data/GFP/ground_truth_GFP_stability_wt_naturalness.csv
-GFP_oracle_dir: oracle_GFP_ggs
+GFP_oracle_dir: oracles/GFP
 foldx_cache: data/foldx/cache.json
 selection_method: random_selection # topk_selection, nested_selection, random_selection, single_task_selection, max_hv_selection
 num_select: 500
